--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "expo export:web",
     "start": "yarn build && npx xnft web",
     "bundle": "yarn build && npx xnft bundle",
-    "dev": "BROWSER=none expo start --web & npx xnft --iframe http://localhost:19006"
+    "dev": "BROWSER=none expo start --web & npx xnft --iframe http://localhost:19006",
+    "dev-win": "npx expo start --web & npx xnft --iframe http://localhost:19006"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.27.0",
@@ -23,6 +24,7 @@
     "expo-linking": "~4.0.1",
     "expo-status-bar": "~1.4.4",
     "fast-glob": "^3.2.12",
+    "firebase": "^10.1.0",
     "glob": "^8.0.3",
     "jszip": "^3.10.1",
     "react": "18.2.0",
