--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "6.3.1",
     "@react-navigation/native": "6.0.10",
     "@react-navigation/native-stack": "6.6.1",
+    "firebase": "^8.0.1",
     "@react-navigation/stack": "6.2.1",
     "@solana/web3.js": "^1.73.0",
     "axios": "^1.4.0",
